[package]
name        = "lumendb"
version     = "0.1.0"
edition     = "2021"
authors     = ["Rizwan Nisar"]
description = "Pure-Rust, zero-C-dependency vector search engine"

[lib]
name = "lumendb"
path = "src/lib.rs"

[[bin]]
name = "lumendb"
path = "src/main.rs"

[dependencies]
parking_lot = "0.12"

sled = "0.34"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"   # metadata JSON blobs
bincode    = "1.3" # compact binary for config / graph state

# ── Milestone 4: The Nexus ────────────────────────────────────────────────────
axum  = { version = "0.7", features = ["json"] }
tokio = { version = "1",   features = ["full"] }
clap  = { version = "4",   features = ["derive"] }

[dev-dependencies]
tempfile = "3"   # temporary directories for storage integration tests

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"

[profile.dev]
opt-level = 1
